correction optimisation des images et contrastes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2063,10 +2063,13 @@ pre code {
 .col-xs-7,
 .col-xs-8,
 .col-xs-9 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
     min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px
+    padding: 15px;
 }
 
 .col-xs-1,
