--- a/style.css
+++ b/style.css
@@ -550,6 +550,7 @@ button {
 }
 
 a[data-lightbox] {
+    width: 100%;
     position: relative;
     display: block;
     text-align: center;
@@ -711,7 +712,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: #FFFFFF;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -721,6 +722,7 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    padding: 15px;
 }
 
 h2 {
@@ -761,7 +763,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #000000;
 }
 
 .portfolio-thumb {
@@ -812,7 +814,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000;
 }
 
 .btn-atomic-tangerine:hover {
@@ -842,19 +844,19 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+    background-image: url("img/dots-bg.webp");
 }
 
 .bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
+    background-image: url("img/lines-h2-bg.webp");
 }
 
 .bg-banniere {
-    background-image: url("img/agence-la-panthere.jpg");
+    background-image: url("img/agence-la-panthere.webp");
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.webp");
 }
 
 @media (max-width: 1024px) {
